--- a/package.json
+++ b/package.json
@@ -6,22 +6,34 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
+    "@prismicio/client": "5.1.1",
     "@stripe/stripe-js": "^1.50.0",
     "@types/node": "18.15.3",
+    "@types/prismic-dom": "^2.1.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.4",
     "faunadb": "^4.8.0",
+    "jest-environment-jsdom": "^29.5.0",
     "next": "13.2.4",
     "next-auth": "^4.20.1",
+    "prismic-dom": "^2.2.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "sass": "^1.59.3",
     "stripe": "^11.15.0",
     "typescript": "5.0.2"
+  },
+  "devDependencies": {
+    "@testing-library/dom": "^9.2.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "babel-jest": "^29.5.0",
+    "jest": "^29.5.0"
   }
 }
