--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "babel-jest": "^29.5.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.5.0"
   }
 }
